# Jack-sparo

./: .gitignore  README.md  ai_studio_code (10).txt  docker-compose.yml
python-client/: miner1_sk.hex  submit_example.py  train.py
rust-server/: Cargo.toml
rust-server/src/: main.rs
