[package]
name = "mlchain-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json", "multipart"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
redis = { version = "0.23", features = ["tokio-comp"] }
ed25519-dalek = "2.0"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
wasmtime = { version = "24.0", features = ["async"] }  # WASM sandbox runner
tower = "0.4"
anyhow = "1.0"
bytes = "1.10.1"
hex = "0.4.3"
